{
  "version": 4,
  "terraform_version": "0.13.5",
  "serial": 74,
  "lineage": "7ff9157b-c5ca-9724-4784-41534595917d",
  "resources": [
    {
      "module": "module.modules",
      "mode": "data",
      "type": "aws_security_group",
      "name": "Backend",
      "provider": "module.modules.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:431360052788:security-group/sg-023ce514deb380a6e",
            "description": "Managed by Terraform",
            "filter": null,
            "id": "sg-023ce514deb380a6e",
            "name": "Backend",
            "tags": {
              "Name": "Backend"
            },
            "vpc_id": "vpc-0438861e6c1c14d6c"
          }
        }
      ]
    },
    {
      "module": "module.modules",
      "mode": "data",
      "type": "aws_security_group",
      "name": "Database",
      "provider": "module.modules.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:431360052788:security-group/sg-097bba28405879dce",
            "description": "Managed by Terraform",
            "filter": null,
            "id": "sg-097bba28405879dce",
            "name": "Database",
            "tags": {
              "Name": "Database"
            },
            "vpc_id": "vpc-0438861e6c1c14d6c"
          }
        }
      ]
    },
    {
      "module": "module.modules",
      "mode": "data",
      "type": "aws_security_group",
      "name": "Infrastructure",
      "provider": "module.modules.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:431360052788:security-group/sg-085e3638a3bab819b",
            "description": "Managed by Terraform",
            "filter": null,
            "id": "sg-085e3638a3bab819b",
            "name": "Infrastructure",
            "tags": {
              "Name": "Infrastructure"
            },
            "vpc_id": "vpc-0438861e6c1c14d6c"
          }
        }
      ]
    },
    {
      "module": "module.modules",
      "mode": "data",
      "type": "aws_security_group",
      "name": "MiddleTier",
      "provider": "module.modules.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:431360052788:security-group/sg-0abf20430609dcbcc",
            "description": "Managed by Terraform",
            "filter": null,
            "id": "sg-0abf20430609dcbcc",
            "name": "MiddleTier",
            "tags": {
              "Name": "MiddleTier"
            },
            "vpc_id": "vpc-0438861e6c1c14d6c"
          }
        }
      ]
    },
    {
      "module": "module.modules",
      "mode": "data",
      "type": "aws_subnet",
      "name": "SubNet-0_1",
      "provider": "module.modules.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:431360052788:subnet/subnet-0fb71a54514b86ed4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "172.64.31.0/24",
            "default_for_az": false,
            "id": "subnet-0fb71a54514b86ed4",
            "map_public_ip_on_launch": false,
            "owner_id": "431360052788",
            "state": "available",
            "tags": {
              "Name": "SubNet-0_1"
            },
            "vpc_id": "vpc-0438861e6c1c14d6c"
          }
        }
      ]
    },
    {
      "module": "module.modules",
      "mode": "data",
      "type": "aws_subnet",
      "name": "SubNet-0_2",
      "provider": "module.modules.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:431360052788:subnet/subnet-090cf2ec7551a674f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "172.64.30.0/24",
            "default_for_az": false,
            "id": "subnet-090cf2ec7551a674f",
            "map_public_ip_on_launch": false,
            "owner_id": "431360052788",
            "state": "available",
            "tags": {
              "Name": "SubNet-0_2"
            },
            "vpc_id": "vpc-0438861e6c1c14d6c"
          }
        }
      ]
    },
    {
      "module": "module.modules",
      "mode": "data",
      "type": "aws_subnet",
      "name": "SubNet-0_3",
      "provider": "module.modules.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:431360052788:subnet/subnet-0278ece0694acbf6e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "172.64.29.0/24",
            "default_for_az": false,
            "id": "subnet-0278ece0694acbf6e",
            "map_public_ip_on_launch": false,
            "owner_id": "431360052788",
            "state": "available",
            "tags": {
              "Name": "SubNet-0_3"
            },
            "vpc_id": "vpc-0438861e6c1c14d6c"
          }
        }
      ]
    },
    {
      "module": "module.modules",
      "mode": "data",
      "type": "aws_subnet",
      "name": "SubNet-0_4",
      "provider": "module.modules.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:431360052788:subnet/subnet-05900955794615063",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "172.64.28.0/24",
            "default_for_az": false,
            "id": "subnet-05900955794615063",
            "map_public_ip_on_launch": false,
            "owner_id": "431360052788",
            "state": "available",
            "tags": {
              "Name": "SubNet-0_4"
            },
            "vpc_id": "vpc-0438861e6c1c14d6c"
          }
        }
      ]
    },
    {
      "module": "module.modules",
      "mode": "data",
      "type": "aws_subnet",
      "name": "SubNet-0_5",
      "provider": "module.modules.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:431360052788:subnet/subnet-0d1614ebba0c8b5ac",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "172.64.27.0/24",
            "default_for_az": false,
            "id": "subnet-0d1614ebba0c8b5ac",
            "map_public_ip_on_launch": false,
            "owner_id": "431360052788",
            "state": "available",
            "tags": {
              "Name": "SubNet-0_5"
            },
            "vpc_id": "vpc-0438861e6c1c14d6c"
          }
        }
      ]
    },
    {
      "module": "module.modules",
      "mode": "data",
      "type": "aws_subnet",
      "name": "SubNet-0_6",
      "provider": "module.modules.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:431360052788:subnet/subnet-08d34a4dcb82678f8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "172.64.26.0/24",
            "default_for_az": false,
            "id": "subnet-08d34a4dcb82678f8",
            "map_public_ip_on_launch": false,
            "owner_id": "431360052788",
            "state": "available",
            "tags": {
              "Name": "SubNet-0_6"
            },
            "vpc_id": "vpc-0438861e6c1c14d6c"
          }
        }
      ]
    },
    {
      "module": "module.modules",
      "mode": "data",
      "type": "aws_vpc",
      "name": "VPC",
      "provider": "module.modules.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:431360052788:vpc/vpc-0438861e6c1c14d6c",
            "cidr_block": "172.64.0.0/19",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-012e2585538173087",
                "cidr_block": "172.64.0.0/19",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-5d168036",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0438861e6c1c14d6c",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0fffecf700366bc5a",
            "owner_id": "431360052788",
            "state": "available",
            "tags": {
              "Name": "DoS"
            }
          }
        }
      ]
    },
    {
      "module": "module.modules",
      "mode": "managed",
      "type": "aws_instance",
      "name": "FlexScanMD-API-38",
      "provider": "module.modules.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-056f139b85f494248",
            "arn": "arn:aws:ec2:us-east-2:431360052788:instance/i-00879c9fd0b20f198",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2b",
            "cpu_core_count": 4,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00879c9fd0b20f198",
            "instance_state": "running",
            "instance_type": "m5.2xlarge",
            "ipv6_address_count": 0,
            "key_name": "test-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-06f9847307701cda5",
            "private_dns": "ip-172-64-27-241.us-east-2.compute.internal",
            "private_ip": "172.64.27.241",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 300,
                "volume_id": "vol-0ea92deac279e18e4",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-023ce514deb380a6e"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d1614ebba0c8b5ac",
            "tags": {
              "Application": "FlexScanMD",
              "Description": "API Server",
              "Environment": "Production-1",
              "Environment-Short": "P1",
              "Name": "MEDAMPP1API04",
              "Owner": "MED",
              "Purpose": "API"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-023ce514deb380a6e"
            ]
          },
          "dependencies": [
            "module.modules.data.aws_availability_zones.AvailabilityZones",
            "module.modules.data.aws_security_group.Backend",
            "module.modules.data.aws_subnet.SubNet-0_5"
          ]
        }
      ]
    },
    {
      "module": "module.modules",
      "mode": "managed",
      "type": "aws_instance",
      "name": "FlexScanMD-FLEX-39",
      "provider": "module.modules.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-056f139b85f494248",
            "arn": "arn:aws:ec2:us-east-2:431360052788:instance/i-0aca05494cd8ced20",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2c",
            "cpu_core_count": 4,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0aca05494cd8ced20",
            "instance_state": "running",
            "instance_type": "m5.2xlarge",
            "ipv6_address_count": 0,
            "key_name": "test-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e97bd90cbb47a808",
            "private_dns": "ip-172-64-26-139.us-east-2.compute.internal",
            "private_ip": "172.64.26.139",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 300,
                "volume_id": "vol-0116da2e513e4514f",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-023ce514deb380a6e"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08d34a4dcb82678f8",
            "tags": {
              "Application": "FlexScanMD",
              "Description": "FlexScan",
              "Environment": "Production-1",
              "Environment-Short": "P1",
              "Name": "MEDAMPP1FLEX04",
              "Owner": "MED",
              "Purpose": "FLEX"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-023ce514deb380a6e"
            ]
          },
          "dependencies": [
            "module.modules.data.aws_availability_zones.AvailabilityZones",
            "module.modules.data.aws_security_group.Backend",
            "module.modules.data.aws_subnet.SubNet-0_6"
          ]
        }
      ]
    },
    {
      "module": "module.modules",
      "mode": "managed",
      "type": "aws_instance",
      "name": "FlexScanMD-SQL-37",
      "provider": "module.modules.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-056f139b85f494248",
            "arn": "arn:aws:ec2:us-east-2:431360052788:instance/i-024ffdd58d6cb6d0c",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2b",
            "cpu_core_count": 4,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-024ffdd58d6cb6d0c",
            "instance_state": "running",
            "instance_type": "m5.2xlarge",
            "ipv6_address_count": 0,
            "key_name": "test-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-04f357f78f09dc61c",
            "private_dns": "ip-172-64-29-86.us-east-2.compute.internal",
            "private_ip": "172.64.29.86",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 300,
                "volume_id": "vol-0b6a00dd4ff8d417f",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-097bba28405879dce"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0278ece0694acbf6e",
            "tags": {
              "Application": "FlexScanMD",
              "Description": "SQL Server (SQL)",
              "Environment": "Production-1",
              "Environment-Short": "P1",
              "Name": "MEDAMPP1SQL04",
              "Owner": "MED",
              "Purpose": "SQL"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-097bba28405879dce"
            ]
          },
          "dependencies": [
            "module.modules.data.aws_availability_zones.AvailabilityZones",
            "module.modules.data.aws_security_group.Database",
            "module.modules.data.aws_subnet.SubNet-0_3"
          ]
        }
      ]
    },
    {
      "module": "module.modules",
      "mode": "managed",
      "type": "aws_instance",
      "name": "Infrastructure-CERT-4",
      "provider": "module.modules.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-056f139b85f494248",
            "arn": "arn:aws:ec2:us-east-2:431360052788:instance/i-01fd9fe07704f5ccd",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01fd9fe07704f5ccd",
            "instance_state": "running",
            "instance_type": "c5.large",
            "ipv6_address_count": 0,
            "key_name": "test-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0cf72d7b6f99baeb3",
            "private_dns": "ip-172-64-31-202.us-east-2.compute.internal",
            "private_ip": "172.64.31.202",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 300,
                "volume_id": "vol-0d9d7d6811b181788",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-085e3638a3bab819b"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fb71a54514b86ed4",
            "tags": {
              "Application": "Infrastructure",
              "Description": "Domain Controller",
              "Environment": "Production-1",
              "Environment-Short": "P1",
              "Name": "MEDAMPP1CERT04",
              "Owner": "MED",
              "Purpose": "CERT"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-085e3638a3bab819b"
            ]
          },
          "dependencies": [
            "module.modules.data.aws_availability_zones.AvailabilityZones",
            "module.modules.data.aws_security_group.Infrastructure",
            "module.modules.data.aws_subnet.SubNet-0_1"
          ]
        }
      ]
    },
    {
      "module": "module.modules",
      "mode": "managed",
      "type": "aws_instance",
      "name": "Infrastructure-DC-2",
      "provider": "module.modules.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-056f139b85f494248",
            "arn": "arn:aws:ec2:us-east-2:431360052788:instance/i-0b678fedd78cc7f6f",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b678fedd78cc7f6f",
            "instance_state": "running",
            "instance_type": "c5.large",
            "ipv6_address_count": 0,
            "key_name": "test-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-068a344f00a449393",
            "private_dns": "ip-172-64-31-74.us-east-2.compute.internal",
            "private_ip": "172.64.31.74",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 300,
                "volume_id": "vol-0bc9157e7680ef9f8",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-085e3638a3bab819b"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fb71a54514b86ed4",
            "tags": {
              "Application": "Infrastructure",
              "Description": "Domain Controller",
              "Environment": "Production-1",
              "Environment-Short": "P1",
              "Name": "MEDAMPP1DC04",
              "Owner": "MED",
              "Purpose": "DC"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-085e3638a3bab819b"
            ]
          },
          "dependencies": [
            "module.modules.data.aws_availability_zones.AvailabilityZones",
            "module.modules.data.aws_security_group.Infrastructure",
            "module.modules.data.aws_subnet.SubNet-0_1"
          ]
        }
      ]
    },
    {
      "module": "module.modules",
      "mode": "managed",
      "type": "aws_instance",
      "name": "Infrastructure-DC-3",
      "provider": "module.modules.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-056f139b85f494248",
            "arn": "arn:aws:ec2:us-east-2:431360052788:instance/i-0173b86ee23f09770",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0173b86ee23f09770",
            "instance_state": "running",
            "instance_type": "c5.large",
            "ipv6_address_count": 0,
            "key_name": "test-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-02c0d7ec829d93b3d",
            "private_dns": "ip-172-64-30-29.us-east-2.compute.internal",
            "private_ip": "172.64.30.29",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 300,
                "volume_id": "vol-05a8a92d8cc730759",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-085e3638a3bab819b"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-090cf2ec7551a674f",
            "tags": {
              "Application": "Infrastructure",
              "Description": "Domain Controller",
              "Environment": "Production-1",
              "Environment-Short": "P1",
              "Name": "MEDAMPP1DC04",
              "Owner": "MED",
              "Purpose": "DC"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-085e3638a3bab819b"
            ]
          },
          "dependencies": [
            "module.modules.data.aws_availability_zones.AvailabilityZones",
            "module.modules.data.aws_security_group.Infrastructure",
            "module.modules.data.aws_subnet.SubNet-0_2"
          ]
        }
      ]
    },
    {
      "module": "module.modules",
      "mode": "managed",
      "type": "aws_instance",
      "name": "PracticeAnalytics-IIS-24",
      "provider": "module.modules.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-056f139b85f494248",
            "arn": "arn:aws:ec2:us-east-2:431360052788:instance/i-00a820a258ea148ed",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2b",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "xvdb",
                "encrypted": false,
                "iops": 768,
                "volume_id": "vol-067a2aa3af65c5766",
                "volume_size": 256,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00a820a258ea148ed",
            "instance_state": "running",
            "instance_type": "m5.xlarge",
            "ipv6_address_count": 0,
            "key_name": "test-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e62712401bea5a66",
            "private_dns": "ip-172-64-31-219.us-east-2.compute.internal",
            "private_ip": "172.64.31.219",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 300,
                "volume_id": "vol-0cd87d8dd0d56ec96",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0abf20430609dcbcc"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fb71a54514b86ed4",
            "tags": {
              "Application": "PracticeAnalytics",
              "Description": "CPM Web Server",
              "Environment": "Production-1",
              "Environment-Short": "P1",
              "Name": "MEDAMPP1IIS04",
              "Owner": "MED",
              "Purpose": "IIS"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0abf20430609dcbcc"
            ]
          },
          "dependencies": [
            "module.modules.data.aws_availability_zones.AvailabilityZones",
            "module.modules.data.aws_security_group.MiddleTier",
            "module.modules.data.aws_subnet.SubNet-0_1"
          ]
        }
      ]
    },
    {
      "module": "module.modules",
      "mode": "managed",
      "type": "aws_instance",
      "name": "PracticeAnalytics-IIS-25",
      "provider": "module.modules.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-056f139b85f494248",
            "arn": "arn:aws:ec2:us-east-2:431360052788:instance/i-0e92ccd68ff2ea480",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e92ccd68ff2ea480",
            "instance_state": "running",
            "instance_type": "m5.large",
            "ipv6_address_count": 0,
            "key_name": "test-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0698adb64c57bcf58",
            "private_dns": "ip-172-64-30-166.us-east-2.compute.internal",
            "private_ip": "172.64.30.166",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 300,
                "volume_id": "vol-04723257b4aa5cb0c",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0abf20430609dcbcc"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-090cf2ec7551a674f",
            "tags": {
              "Application": "PracticeAnalytics",
              "Description": "ARP Web Server",
              "Environment": "Production-1",
              "Environment-Short": "P1",
              "Name": "MEDAMPP1IIS04",
              "Owner": "MED",
              "Purpose": "IIS"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0abf20430609dcbcc"
            ]
          },
          "dependencies": [
            "module.modules.data.aws_availability_zones.AvailabilityZones",
            "module.modules.data.aws_security_group.MiddleTier",
            "module.modules.data.aws_subnet.SubNet-0_2"
          ]
        }
      ]
    },
    {
      "module": "module.modules",
      "mode": "managed",
      "type": "aws_instance",
      "name": "PracticeAnalytics-IIS-28",
      "provider": "module.modules.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-056f139b85f494248",
            "arn": "arn:aws:ec2:us-east-2:431360052788:instance/i-0448d8dece612abb2",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2b",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0448d8dece612abb2",
            "instance_state": "running",
            "instance_type": "m5.xlarge",
            "ipv6_address_count": 0,
            "key_name": "test-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-08611bc9b7195ebb9",
            "private_dns": "ip-172-64-31-178.us-east-2.compute.internal",
            "private_ip": "172.64.31.178",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 300,
                "volume_id": "vol-01bac44063dce8379",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0abf20430609dcbcc"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fb71a54514b86ed4",
            "tags": {
              "Application": "PracticeAnalytics",
              "Description": "MicroStrategy Web Server",
              "Environment": "Production-1",
              "Environment-Short": "P1",
              "Name": "MEDAMPP1IIS04",
              "Owner": "MED",
              "Purpose": "IIS"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0abf20430609dcbcc"
            ]
          },
          "dependencies": [
            "module.modules.data.aws_availability_zones.AvailabilityZones",
            "module.modules.data.aws_security_group.MiddleTier",
            "module.modules.data.aws_subnet.SubNet-0_1"
          ]
        }
      ]
    },
    {
      "module": "module.modules",
      "mode": "managed",
      "type": "aws_instance",
      "name": "PracticeAnalytics-IIS-30",
      "provider": "module.modules.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-056f139b85f494248",
            "arn": "arn:aws:ec2:us-east-2:431360052788:instance/i-02676ea63c76911a8",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2b",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02676ea63c76911a8",
            "instance_state": "running",
            "instance_type": "m5.xlarge",
            "ipv6_address_count": 0,
            "key_name": "test-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f23d59fb7d1f7e2a",
            "private_dns": "ip-172-64-31-168.us-east-2.compute.internal",
            "private_ip": "172.64.31.168",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 300,
                "volume_id": "vol-083b3bac4624d4d58",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0abf20430609dcbcc"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fb71a54514b86ed4",
            "tags": {
              "Application": "PracticeAnalytics",
              "Description": "CDS POC Recommendations and Legacy InfoButton (Web)",
              "Environment": "Production-1",
              "Environment-Short": "P1",
              "Name": "MEDAMPP1IIS04",
              "Owner": "MED",
              "Purpose": "IIS"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0abf20430609dcbcc"
            ]
          },
          "dependencies": [
            "module.modules.data.aws_availability_zones.AvailabilityZones",
            "module.modules.data.aws_security_group.MiddleTier",
            "module.modules.data.aws_subnet.SubNet-0_1"
          ]
        }
      ]
    },
    {
      "module": "module.modules",
      "mode": "managed",
      "type": "aws_instance",
      "name": "PracticeAnalytics-IIS-32",
      "provider": "module.modules.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-056f139b85f494248",
            "arn": "arn:aws:ec2:us-east-2:431360052788:instance/i-0cbe85ee663dffaef",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2b",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cbe85ee663dffaef",
            "instance_state": "running",
            "instance_type": "m5.xlarge",
            "ipv6_address_count": 0,
            "key_name": "test-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-024a09fe7d70abe74",
            "private_dns": "ip-172-64-31-224.us-east-2.compute.internal",
            "private_ip": "172.64.31.224",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 300,
                "volume_id": "vol-049ca852090d74c47",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0abf20430609dcbcc"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fb71a54514b86ed4",
            "tags": {
              "Application": "PracticeAnalytics",
              "Description": "CDS POC Recommendations Authoring Server (Web)",
              "Environment": "Production-1",
              "Environment-Short": "P1",
              "Name": "MEDAMPP1IIS04",
              "Owner": "MED",
              "Purpose": "IIS"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0abf20430609dcbcc"
            ]
          },
          "dependencies": [
            "module.modules.data.aws_availability_zones.AvailabilityZones",
            "module.modules.data.aws_security_group.MiddleTier",
            "module.modules.data.aws_subnet.SubNet-0_1"
          ]
        }
      ]
    },
    {
      "module": "module.modules",
      "mode": "managed",
      "type": "aws_instance",
      "name": "PracticeAnalytics-INTL-27",
      "provider": "module.modules.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-056f139b85f494248",
            "arn": "arn:aws:ec2:us-east-2:431360052788:instance/i-0c37b9314a562aeec",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2b",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "xvdb",
                "encrypted": false,
                "iops": 768,
                "volume_id": "vol-02be34b26a3f22b58",
                "volume_size": 256,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c37b9314a562aeec",
            "instance_state": "running",
            "instance_type": "m5.xlarge",
            "ipv6_address_count": 0,
            "key_name": "test-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0afc9b7677f1162d4",
            "private_dns": "ip-172-64-27-12.us-east-2.compute.internal",
            "private_ip": "172.64.27.12",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 300,
                "volume_id": "vol-00e79841c8cfb15d6",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-023ce514deb380a6e"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d1614ebba0c8b5ac",
            "tags": {
              "Application": "PracticeAnalytics",
              "Description": "MicroStrategy Intelligence Server",
              "Environment": "Production-1",
              "Environment-Short": "P1",
              "Name": "MEDAMPP1INTL04",
              "Owner": "MED",
              "Purpose": "INTL"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-023ce514deb380a6e"
            ]
          },
          "dependencies": [
            "module.modules.data.aws_availability_zones.AvailabilityZones",
            "module.modules.data.aws_security_group.Backend",
            "module.modules.data.aws_subnet.SubNet-0_5"
          ]
        }
      ]
    },
    {
      "module": "module.modules",
      "mode": "managed",
      "type": "aws_instance",
      "name": "PracticeAnalytics-MES-29",
      "provider": "module.modules.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-056f139b85f494248",
            "arn": "arn:aws:ec2:us-east-2:431360052788:instance/i-04444f912ed1f3e99",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2c",
            "cpu_core_count": 4,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04444f912ed1f3e99",
            "instance_state": "running",
            "instance_type": "m5.2xlarge",
            "ipv6_address_count": 0,
            "key_name": "test-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0867fda978f84d689",
            "private_dns": "ip-172-64-26-32.us-east-2.compute.internal",
            "private_ip": "172.64.26.32",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 300,
                "volume_id": "vol-029f7b78f9a196e02",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-023ce514deb380a6e"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08d34a4dcb82678f8",
            "tags": {
              "Application": "PracticeAnalytics",
              "Description": "MicroStrategy Enterprise Server",
              "Environment": "Production-1",
              "Environment-Short": "P1",
              "Name": "MEDAMPP1MES04",
              "Owner": "MED",
              "Purpose": "MES"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-023ce514deb380a6e"
            ]
          },
          "dependencies": [
            "module.modules.data.aws_availability_zones.AvailabilityZones",
            "module.modules.data.aws_security_group.Backend",
            "module.modules.data.aws_subnet.SubNet-0_6"
          ]
        }
      ]
    },
    {
      "module": "module.modules",
      "mode": "managed",
      "type": "aws_instance",
      "name": "PracticeAnalytics-SQL-21",
      "provider": "module.modules.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-056f139b85f494248",
            "arn": "arn:aws:ec2:us-east-2:431360052788:instance/i-0fa3383ca570a29a4",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2c",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "xvdb",
                "encrypted": false,
                "iops": 25000,
                "volume_id": "vol-0986d1c6abc238aa6",
                "volume_size": 2048,
                "volume_type": "io1"
              },
              {
                "delete_on_termination": true,
                "device_name": "xvdc",
                "encrypted": false,
                "iops": 1536,
                "volume_id": "vol-01b1ed85fa92ba9f0",
                "volume_size": 512,
                "volume_type": "gp2"
              },
              {
                "delete_on_termination": true,
                "device_name": "xvdd",
                "encrypted": false,
                "iops": 1536,
                "volume_id": "vol-056eb83442737c355",
                "volume_size": 512,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fa3383ca570a29a4",
            "instance_state": "running",
            "instance_type": "m5.xlarge",
            "ipv6_address_count": 0,
            "key_name": "test-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-08fb24161ea56b533",
            "private_dns": "ip-172-64-28-203.us-east-2.compute.internal",
            "private_ip": "172.64.28.203",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 300,
                "volume_id": "vol-08062430c80016170",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-097bba28405879dce"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05900955794615063",
            "tags": {
              "Application": "PracticeAnalytics",
              "Description": "CDWMaster (SQL)",
              "Environment": "Production-1",
              "Environment-Short": "P1",
              "Name": "MEDAMPP1SQL04",
              "Owner": "MED",
              "Purpose": "SQL"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-097bba28405879dce"
            ]
          },
          "dependencies": [
            "module.modules.data.aws_availability_zones.AvailabilityZones",
            "module.modules.data.aws_security_group.Database",
            "module.modules.data.aws_subnet.SubNet-0_4"
          ]
        }
      ]
    },
    {
      "module": "module.modules",
      "mode": "managed",
      "type": "aws_instance",
      "name": "PracticeAnalytics-SQL-22",
      "provider": "module.modules.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-056f139b85f494248",
            "arn": "arn:aws:ec2:us-east-2:431360052788:instance/i-052ef041aad5493e2",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2c",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "xvdb",
                "encrypted": false,
                "iops": 25000,
                "volume_id": "vol-078700ba74f445809",
                "volume_size": 2048,
                "volume_type": "io1"
              },
              {
                "delete_on_termination": true,
                "device_name": "xvdc",
                "encrypted": false,
                "iops": 25000,
                "volume_id": "vol-087abcad228ee01fc",
                "volume_size": 2048,
                "volume_type": "io1"
              },
              {
                "delete_on_termination": true,
                "device_name": "xvdd",
                "encrypted": false,
                "iops": 1536,
                "volume_id": "vol-058b4031d2f724766",
                "volume_size": 512,
                "volume_type": "gp2"
              },
              {
                "delete_on_termination": true,
                "device_name": "xvde",
                "encrypted": false,
                "iops": 1536,
                "volume_id": "vol-019fe2f7fa5911896",
                "volume_size": 512,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-052ef041aad5493e2",
            "instance_state": "running",
            "instance_type": "m5.xlarge",
            "ipv6_address_count": 0,
            "key_name": "test-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d6586f9627256a77",
            "private_dns": "ip-172-64-28-221.us-east-2.compute.internal",
            "private_ip": "172.64.28.221",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 300,
                "volume_id": "vol-0b7a25b01ae126c56",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-097bba28405879dce"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05900955794615063",
            "tags": {
              "Application": "PracticeAnalytics",
              "Description": "CDWDataNode (SQL)",
              "Environment": "Production-1",
              "Environment-Short": "P1",
              "Name": "MEDAMPP1SQL04",
              "Owner": "MED",
              "Purpose": "SQL"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-097bba28405879dce"
            ]
          },
          "dependencies": [
            "module.modules.data.aws_availability_zones.AvailabilityZones",
            "module.modules.data.aws_security_group.Database",
            "module.modules.data.aws_subnet.SubNet-0_4"
          ]
        }
      ]
    },
    {
      "module": "module.modules",
      "mode": "managed",
      "type": "aws_instance",
      "name": "PracticeAnalytics-SQL-23",
      "provider": "module.modules.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-056f139b85f494248",
            "arn": "arn:aws:ec2:us-east-2:431360052788:instance/i-0af2a40d5e7bc1029",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2c",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "xvdb",
                "encrypted": false,
                "iops": 25000,
                "volume_id": "vol-07ba22b860583d853",
                "volume_size": 2048,
                "volume_type": "io1"
              },
              {
                "delete_on_termination": true,
                "device_name": "xvdc",
                "encrypted": false,
                "iops": 768,
                "volume_id": "vol-05ee4c4e304044931",
                "volume_size": 256,
                "volume_type": "gp2"
              },
              {
                "delete_on_termination": true,
                "device_name": "xvdd",
                "encrypted": false,
                "iops": 1536,
                "volume_id": "vol-0153bd9b1b9a16274",
                "volume_size": 512,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0af2a40d5e7bc1029",
            "instance_state": "running",
            "instance_type": "m5.xlarge",
            "ipv6_address_count": 0,
            "key_name": "test-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0fdde3f2568fbd97d",
            "private_dns": "ip-172-64-28-94.us-east-2.compute.internal",
            "private_ip": "172.64.28.94",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 300,
                "volume_id": "vol-00c6956093bbdd0ae",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-097bba28405879dce"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05900955794615063",
            "tags": {
              "Application": "PracticeAnalytics",
              "Description": "CPMDataNode (SQL)",
              "Environment": "Production-1",
              "Environment-Short": "P1",
              "Name": "MEDAMPP1SQL04",
              "Owner": "MED",
              "Purpose": "SQL"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-097bba28405879dce"
            ]
          },
          "dependencies": [
            "module.modules.data.aws_availability_zones.AvailabilityZones",
            "module.modules.data.aws_security_group.Database",
            "module.modules.data.aws_subnet.SubNet-0_4"
          ]
        }
      ]
    },
    {
      "module": "module.modules",
      "mode": "managed",
      "type": "aws_instance",
      "name": "PracticeAnalytics-SQL-26",
      "provider": "module.modules.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-056f139b85f494248",
            "arn": "arn:aws:ec2:us-east-2:431360052788:instance/i-005c0acafbb188829",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2c",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "xvdb",
                "encrypted": false,
                "iops": 768,
                "volume_id": "vol-03d0d668994e51b7a",
                "volume_size": 256,
                "volume_type": "gp2"
              },
              {
                "delete_on_termination": true,
                "device_name": "xvdc",
                "encrypted": false,
                "iops": 768,
                "volume_id": "vol-0a5e453cbcbf5d68b",
                "volume_size": 256,
                "volume_type": "gp2"
              },
              {
                "delete_on_termination": true,
                "device_name": "xvdd",
                "encrypted": false,
                "iops": 768,
                "volume_id": "vol-0d18f660686f1f8a0",
                "volume_size": 256,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-005c0acafbb188829",
            "instance_state": "running",
            "instance_type": "m5.xlarge",
            "ipv6_address_count": 0,
            "key_name": "test-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-01b914c7274416e3b",
            "private_dns": "ip-172-64-28-57.us-east-2.compute.internal",
            "private_ip": "172.64.28.57",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 300,
                "volume_id": "vol-074e2c9e3e79d58d4",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-097bba28405879dce"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05900955794615063",
            "tags": {
              "Application": "PracticeAnalytics",
              "Description": "MicroStrategy Metadata (SQL)",
              "Environment": "Production-1",
              "Environment-Short": "P1",
              "Name": "MEDAMPP1SQL04",
              "Owner": "MED",
              "Purpose": "SQL"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-097bba28405879dce"
            ]
          },
          "dependencies": [
            "module.modules.data.aws_availability_zones.AvailabilityZones",
            "module.modules.data.aws_security_group.Database",
            "module.modules.data.aws_subnet.SubNet-0_4"
          ]
        }
      ]
    },
    {
      "module": "module.modules",
      "mode": "managed",
      "type": "aws_instance",
      "name": "PracticeAnalytics-SQL-31",
      "provider": "module.modules.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-056f139b85f494248",
            "arn": "arn:aws:ec2:us-east-2:431360052788:instance/i-06a634b9d8dd5cc23",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2c",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "xvdb",
                "encrypted": false,
                "iops": 768,
                "volume_id": "vol-0aef1ae4d59d40b0d",
                "volume_size": 256,
                "volume_type": "gp2"
              },
              {
                "delete_on_termination": true,
                "device_name": "xvdc",
                "encrypted": false,
                "iops": 768,
                "volume_id": "vol-088a602294b6a5796",
                "volume_size": 256,
                "volume_type": "gp2"
              },
              {
                "delete_on_termination": true,
                "device_name": "xvdd",
                "encrypted": false,
                "iops": 768,
                "volume_id": "vol-06baa3bfcf8432360",
                "volume_size": 256,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06a634b9d8dd5cc23",
            "instance_state": "running",
            "instance_type": "m5.xlarge",
            "ipv6_address_count": 0,
            "key_name": "test-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-077690d4c98d7992a",
            "private_dns": "ip-172-64-28-120.us-east-2.compute.internal",
            "private_ip": "172.64.28.120",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 300,
                "volume_id": "vol-0c1f24d465ddc0234",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-097bba28405879dce"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05900955794615063",
            "tags": {
              "Application": "PracticeAnalytics",
              "Description": "CDS Subscription Manager and Activity Service (Web + DB Server) (SQL)",
              "Environment": "Production-1",
              "Environment-Short": "P1",
              "Name": "MEDAMPP1SQL04",
              "Owner": "MED",
              "Purpose": "SQL"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-097bba28405879dce"
            ]
          },
          "dependencies": [
            "module.modules.data.aws_availability_zones.AvailabilityZones",
            "module.modules.data.aws_security_group.Database",
            "module.modules.data.aws_subnet.SubNet-0_4"
          ]
        }
      ]
    },
    {
      "module": "module.modules",
      "mode": "managed",
      "type": "aws_instance",
      "name": "PracticeAnalytics-SQL-33",
      "provider": "module.modules.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-056f139b85f494248",
            "arn": "arn:aws:ec2:us-east-2:431360052788:instance/i-07c0e2253b2127434",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2c",
            "cpu_core_count": 4,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "xvdb",
                "encrypted": false,
                "iops": 768,
                "volume_id": "vol-0cfe2a3363ea53d13",
                "volume_size": 256,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07c0e2253b2127434",
            "instance_state": "running",
            "instance_type": "m5.2xlarge",
            "ipv6_address_count": 0,
            "key_name": "test-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0bf3d83bdd64fb5ca",
            "private_dns": "ip-172-64-28-110.us-east-2.compute.internal",
            "private_ip": "172.64.28.110",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 300,
                "volume_id": "vol-0817489e5e85d6e31",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-097bba28405879dce"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05900955794615063",
            "tags": {
              "Application": "PracticeAnalytics",
              "Description": "OMS (Web + DB) (SQL)",
              "Environment": "Production-1",
              "Environment-Short": "P1",
              "Name": "MEDAMPP1SQL04",
              "Owner": "MED",
              "Purpose": "SQL"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-097bba28405879dce"
            ]
          },
          "dependencies": [
            "module.modules.data.aws_availability_zones.AvailabilityZones",
            "module.modules.data.aws_security_group.Database",
            "module.modules.data.aws_subnet.SubNet-0_4"
          ]
        }
      ]
    },
    {
      "module": "module.modules",
      "mode": "managed",
      "type": "aws_instance",
      "name": "PreNatal-IIS-19",
      "provider": "module.modules.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-056f139b85f494248",
            "arn": "arn:aws:ec2:us-east-2:431360052788:instance/i-0034ee107a4a0ae72",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2b",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "xvdb",
                "encrypted": false,
                "iops": 3072,
                "volume_id": "vol-040b28eacf880ff96",
                "volume_size": 1024,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0034ee107a4a0ae72",
            "instance_state": "running",
            "instance_type": "m5.xlarge",
            "ipv6_address_count": 0,
            "key_name": "test-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-019823f44023970f0",
            "private_dns": "ip-172-64-31-10.us-east-2.compute.internal",
            "private_ip": "172.64.31.10",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 300,
                "volume_id": "vol-08c7200efdb954930",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0abf20430609dcbcc"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fb71a54514b86ed4",
            "tags": {
              "Application": "PreNatal",
              "Description": "Web Server ",
              "Environment": "Production-1",
              "Environment-Short": "P1",
              "Name": "MEDAMPP1IIS04",
              "Owner": "MED",
              "Purpose": "IIS"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0abf20430609dcbcc"
            ]
          },
          "dependencies": [
            "module.modules.data.aws_availability_zones.AvailabilityZones",
            "module.modules.data.aws_security_group.MiddleTier",
            "module.modules.data.aws_subnet.SubNet-0_1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-056f139b85f494248",
            "arn": "arn:aws:ec2:us-east-2:431360052788:instance/i-0113a9f1d57c1273c",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2b",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "xvdb",
                "encrypted": false,
                "iops": 3072,
                "volume_id": "vol-06ca25ace5b38b7b9",
                "volume_size": 1024,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0113a9f1d57c1273c",
            "instance_state": "running",
            "instance_type": "m5.xlarge",
            "ipv6_address_count": 0,
            "key_name": "test-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-05d02463ce657e555",
            "private_dns": "ip-172-64-31-101.us-east-2.compute.internal",
            "private_ip": "172.64.31.101",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 300,
                "volume_id": "vol-04cd269f485d1441e",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0abf20430609dcbcc"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fb71a54514b86ed4",
            "tags": {
              "Application": "PreNatal",
              "Description": "Web Server ",
              "Environment": "Production-1",
              "Environment-Short": "P1",
              "Name": "MEDAMPP1IIS05",
              "Owner": "MED",
              "Purpose": "IIS"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0abf20430609dcbcc"
            ]
          },
          "dependencies": [
            "module.modules.data.aws_availability_zones.AvailabilityZones",
            "module.modules.data.aws_security_group.MiddleTier",
            "module.modules.data.aws_subnet.SubNet-0_1"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-056f139b85f494248",
            "arn": "arn:aws:ec2:us-east-2:431360052788:instance/i-036bf03d4274b9cbe",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2b",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "xvdb",
                "encrypted": false,
                "iops": 3072,
                "volume_id": "vol-0a300885a1be12868",
                "volume_size": 1024,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-036bf03d4274b9cbe",
            "instance_state": "running",
            "instance_type": "m5.xlarge",
            "ipv6_address_count": 0,
            "key_name": "test-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-09fa9fddb7023eba1",
            "private_dns": "ip-172-64-31-41.us-east-2.compute.internal",
            "private_ip": "172.64.31.41",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 300,
                "volume_id": "vol-0b7d23a992175f71b",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0abf20430609dcbcc"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fb71a54514b86ed4",
            "tags": {
              "Application": "PreNatal",
              "Description": "Web Server ",
              "Environment": "Production-1",
              "Environment-Short": "P1",
              "Name": "MEDAMPP1IIS06",
              "Owner": "MED",
              "Purpose": "IIS"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0abf20430609dcbcc"
            ]
          },
          "dependencies": [
            "module.modules.data.aws_availability_zones.AvailabilityZones",
            "module.modules.data.aws_security_group.MiddleTier",
            "module.modules.data.aws_subnet.SubNet-0_1"
          ]
        }
      ]
    },
    {
      "module": "module.modules",
      "mode": "managed",
      "type": "aws_instance",
      "name": "PreNatal-SQL-20",
      "provider": "module.modules.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-056f139b85f494248",
            "arn": "arn:aws:ec2:us-east-2:431360052788:instance/i-0908139e1b57dea91",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2b",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "xvdb",
                "encrypted": false,
                "iops": 25000,
                "volume_id": "vol-0855f2ebf8a4521d9",
                "volume_size": 2048,
                "volume_type": "io1"
              },
              {
                "delete_on_termination": true,
                "device_name": "xvdc",
                "encrypted": false,
                "iops": 1536,
                "volume_id": "vol-077af6a4b56ff493c",
                "volume_size": 512,
                "volume_type": "gp2"
              },
              {
                "delete_on_termination": true,
                "device_name": "xvdd",
                "encrypted": false,
                "iops": 3072,
                "volume_id": "vol-067b9ac247e8d58de",
                "volume_size": 1024,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0908139e1b57dea91",
            "instance_state": "running",
            "instance_type": "m5.xlarge",
            "ipv6_address_count": 0,
            "key_name": "test-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0eb79f1b1e9af9942",
            "private_dns": "ip-172-64-29-237.us-east-2.compute.internal",
            "private_ip": "172.64.29.237",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 300,
                "volume_id": "vol-0563ac54112839e11",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-097bba28405879dce"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0278ece0694acbf6e",
            "tags": {
              "Application": "PreNatal",
              "Description": "Database Server (SQL)",
              "Environment": "Production-1",
              "Environment-Short": "P1",
              "Name": "MEDAMPP1SQL04",
              "Owner": "MED",
              "Purpose": "SQL"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-097bba28405879dce"
            ]
          },
          "dependencies": [
            "module.modules.data.aws_availability_zones.AvailabilityZones",
            "module.modules.data.aws_security_group.Database",
            "module.modules.data.aws_subnet.SubNet-0_3"
          ]
        }
      ]
    },
    {
      "module": "module.modules",
      "mode": "managed",
      "type": "aws_instance",
      "name": "Relaymed-IIS-34",
      "provider": "module.modules.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-056f139b85f494248",
            "arn": "arn:aws:ec2:us-east-2:431360052788:instance/i-0ccd45042c12499e0",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2b",
            "cpu_core_count": 4,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ccd45042c12499e0",
            "instance_state": "running",
            "instance_type": "m5.2xlarge",
            "ipv6_address_count": 0,
            "key_name": "test-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d16f194f56a946ce",
            "private_dns": "ip-172-64-31-53.us-east-2.compute.internal",
            "private_ip": "172.64.31.53",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 300,
                "volume_id": "vol-0f090d8616d05a1da",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0abf20430609dcbcc"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fb71a54514b86ed4",
            "tags": {
              "Application": "Relaymed",
              "Description": "Web portal \u0026 Relaymed Service",
              "Environment": "Production-1",
              "Environment-Short": "P1",
              "Name": "MEDAMPP1IIS04",
              "Owner": "MED",
              "Purpose": "IIS"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0abf20430609dcbcc"
            ]
          },
          "dependencies": [
            "module.modules.data.aws_availability_zones.AvailabilityZones",
            "module.modules.data.aws_security_group.MiddleTier",
            "module.modules.data.aws_subnet.SubNet-0_1"
          ]
        }
      ]
    },
    {
      "module": "module.modules",
      "mode": "managed",
      "type": "aws_instance",
      "name": "Relaymed-IIS-35",
      "provider": "module.modules.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-056f139b85f494248",
            "arn": "arn:aws:ec2:us-east-2:431360052788:instance/i-0ac705d4b1580c8db",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2c",
            "cpu_core_count": 4,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ac705d4b1580c8db",
            "instance_state": "running",
            "instance_type": "m5.2xlarge",
            "ipv6_address_count": 0,
            "key_name": "test-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0517a84cce743ce31",
            "private_dns": "ip-172-64-30-62.us-east-2.compute.internal",
            "private_ip": "172.64.30.62",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 300,
                "volume_id": "vol-0a73ffab188cd7ffd",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0abf20430609dcbcc"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-090cf2ec7551a674f",
            "tags": {
              "Application": "Relaymed",
              "Description": "Web portal \u0026 Relaymed Service",
              "Environment": "Production-1",
              "Environment-Short": "P1",
              "Name": "MEDAMPP1IIS04",
              "Owner": "MED",
              "Purpose": "IIS"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0abf20430609dcbcc"
            ]
          },
          "dependencies": [
            "module.modules.data.aws_availability_zones.AvailabilityZones",
            "module.modules.data.aws_security_group.MiddleTier",
            "module.modules.data.aws_subnet.SubNet-0_2"
          ]
        }
      ]
    },
    {
      "module": "module.modules",
      "mode": "managed",
      "type": "aws_instance",
      "name": "RightFax-FAX-41",
      "provider": "module.modules.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-056f139b85f494248",
            "arn": "arn:aws:ec2:us-east-2:431360052788:instance/i-0ebf68c0c2dbfb1b7",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2b",
            "cpu_core_count": 4,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ebf68c0c2dbfb1b7",
            "instance_state": "running",
            "instance_type": "m5.2xlarge",
            "ipv6_address_count": 0,
            "key_name": "test-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f394004d082d317c",
            "private_dns": "ip-172-64-27-74.us-east-2.compute.internal",
            "private_ip": "172.64.27.74",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 300,
                "volume_id": "vol-0187f9cdaa57cf96d",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-023ce514deb380a6e"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d1614ebba0c8b5ac",
            "tags": {
              "Application": "RightFax",
              "Description": "RightFax Servers",
              "Environment": "Production-1",
              "Environment-Short": "P1",
              "Name": "MEDAMPP1FAX04",
              "Owner": "MED",
              "Purpose": "FAX"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-023ce514deb380a6e"
            ]
          },
          "dependencies": [
            "module.modules.data.aws_availability_zones.AvailabilityZones",
            "module.modules.data.aws_security_group.Backend",
            "module.modules.data.aws_subnet.SubNet-0_5"
          ]
        }
      ]
    },
    {
      "module": "module.modules",
      "mode": "managed",
      "type": "aws_instance",
      "name": "RightFax-FAX-42",
      "provider": "module.modules.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-056f139b85f494248",
            "arn": "arn:aws:ec2:us-east-2:431360052788:instance/i-01f90dd2d4a9e6550",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2c",
            "cpu_core_count": 4,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01f90dd2d4a9e6550",
            "instance_state": "running",
            "instance_type": "m5.2xlarge",
            "ipv6_address_count": 0,
            "key_name": "test-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0056cbc43953cac18",
            "private_dns": "ip-172-64-26-39.us-east-2.compute.internal",
            "private_ip": "172.64.26.39",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 300,
                "volume_id": "vol-06a99e7aae7ba76f8",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-023ce514deb380a6e"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08d34a4dcb82678f8",
            "tags": {
              "Application": "RightFax",
              "Description": "RightFax Servers",
              "Environment": "Production-1",
              "Environment-Short": "P1",
              "Name": "MEDAMPP1FAX04",
              "Owner": "MED",
              "Purpose": "FAX"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-023ce514deb380a6e"
            ]
          },
          "dependencies": [
            "module.modules.data.aws_availability_zones.AvailabilityZones",
            "module.modules.data.aws_security_group.Backend",
            "module.modules.data.aws_subnet.SubNet-0_6"
          ]
        }
      ]
    },
    {
      "module": "module.modules",
      "mode": "managed",
      "type": "aws_instance",
      "name": "RightFax-SQL-43",
      "provider": "module.modules.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-056f139b85f494248",
            "arn": "arn:aws:ec2:us-east-2:431360052788:instance/i-00dc58cdb6c0dd280",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2b",
            "cpu_core_count": 4,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00dc58cdb6c0dd280",
            "instance_state": "running",
            "instance_type": "m5.2xlarge",
            "ipv6_address_count": 0,
            "key_name": "test-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b66b9ecf77dc0111",
            "private_dns": "ip-172-64-29-153.us-east-2.compute.internal",
            "private_ip": "172.64.29.153",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 300,
                "volume_id": "vol-05262f836b7a7e094",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-097bba28405879dce"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0278ece0694acbf6e",
            "tags": {
              "Application": "RightFax",
              "Description": "RightFax DB Server (SQL)",
              "Environment": "Production-1",
              "Environment-Short": "P1",
              "Name": "MEDAMPP1SQL04",
              "Owner": "MED",
              "Purpose": "SQL"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-097bba28405879dce"
            ]
          },
          "dependencies": [
            "module.modules.data.aws_availability_zones.AvailabilityZones",
            "module.modules.data.aws_security_group.Database",
            "module.modules.data.aws_subnet.SubNet-0_3"
          ]
        }
      ]
    },
    {
      "module": "module.modules",
      "mode": "managed",
      "type": "aws_instance",
      "name": "TouchWorks-FHIR-17",
      "provider": "module.modules.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-056f139b85f494248",
            "arn": "arn:aws:ec2:us-east-2:431360052788:instance/i-00deac0c60a822aae",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00deac0c60a822aae",
            "instance_state": "running",
            "instance_type": "m5.large",
            "ipv6_address_count": 0,
            "key_name": "test-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-02190c08b554e1e19",
            "private_dns": "ip-172-64-31-71.us-east-2.compute.internal",
            "private_ip": "172.64.31.71",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 300,
                "volume_id": "vol-04c01ed598457c1e1",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0abf20430609dcbcc"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fb71a54514b86ed4",
            "tags": {
              "Application": "TouchWorks",
              "Description": "FHIR and Unity",
              "Environment": "Production-1",
              "Environment-Short": "P1",
              "Name": "MEDAMPP1FHIR04",
              "Owner": "MED",
              "Purpose": "FHIR"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0abf20430609dcbcc"
            ]
          },
          "dependencies": [
            "module.modules.data.aws_availability_zones.AvailabilityZones",
            "module.modules.data.aws_security_group.MiddleTier",
            "module.modules.data.aws_subnet.SubNet-0_1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-056f139b85f494248",
            "arn": "arn:aws:ec2:us-east-2:431360052788:instance/i-0eb0646fc57038734",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0eb0646fc57038734",
            "instance_state": "running",
            "instance_type": "m5.large",
            "ipv6_address_count": 0,
            "key_name": "test-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-061976b6323516cb3",
            "private_dns": "ip-172-64-31-246.us-east-2.compute.internal",
            "private_ip": "172.64.31.246",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 300,
                "volume_id": "vol-06be809dc2b57ec9e",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0abf20430609dcbcc"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fb71a54514b86ed4",
            "tags": {
              "Application": "TouchWorks",
              "Description": "FHIR and Unity",
              "Environment": "Production-1",
              "Environment-Short": "P1",
              "Name": "MEDAMPP1FHIR05",
              "Owner": "MED",
              "Purpose": "FHIR"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0abf20430609dcbcc"
            ]
          },
          "dependencies": [
            "module.modules.data.aws_availability_zones.AvailabilityZones",
            "module.modules.data.aws_security_group.MiddleTier",
            "module.modules.data.aws_subnet.SubNet-0_1"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-056f139b85f494248",
            "arn": "arn:aws:ec2:us-east-2:431360052788:instance/i-0137eca1081bd343d",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0137eca1081bd343d",
            "instance_state": "running",
            "instance_type": "m5.large",
            "ipv6_address_count": 0,
            "key_name": "test-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-04a389f0f36a44f8f",
            "private_dns": "ip-172-64-31-127.us-east-2.compute.internal",
            "private_ip": "172.64.31.127",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 300,
                "volume_id": "vol-0b6e510116898ad90",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0abf20430609dcbcc"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fb71a54514b86ed4",
            "tags": {
              "Application": "TouchWorks",
              "Description": "FHIR and Unity",
              "Environment": "Production-1",
              "Environment-Short": "P1",
              "Name": "MEDAMPP1FHIR06",
              "Owner": "MED",
              "Purpose": "FHIR"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0abf20430609dcbcc"
            ]
          },
          "dependencies": [
            "module.modules.data.aws_availability_zones.AvailabilityZones",
            "module.modules.data.aws_security_group.MiddleTier",
            "module.modules.data.aws_subnet.SubNet-0_1"
          ]
        }
      ]
    },
    {
      "module": "module.modules",
      "mode": "managed",
      "type": "aws_instance",
      "name": "TouchWorks-FHIR-18",
      "provider": "module.modules.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-056f139b85f494248",
            "arn": "arn:aws:ec2:us-east-2:431360052788:instance/i-06106c864e180eb16",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06106c864e180eb16",
            "instance_state": "running",
            "instance_type": "m5.large",
            "ipv6_address_count": 0,
            "key_name": "test-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c00ff0364fa93b30",
            "private_dns": "ip-172-64-30-116.us-east-2.compute.internal",
            "private_ip": "172.64.30.116",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 300,
                "volume_id": "vol-013f515bec6d189f9",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0abf20430609dcbcc"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-090cf2ec7551a674f",
            "tags": {
              "Application": "TouchWorks",
              "Description": "FHIR and Unity",
              "Environment": "Production-1",
              "Environment-Short": "P1",
              "Name": "MEDAMPP1FHIR04",
              "Owner": "MED",
              "Purpose": "FHIR"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0abf20430609dcbcc"
            ]
          },
          "dependencies": [
            "module.modules.data.aws_availability_zones.AvailabilityZones",
            "module.modules.data.aws_security_group.MiddleTier",
            "module.modules.data.aws_subnet.SubNet-0_2"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-056f139b85f494248",
            "arn": "arn:aws:ec2:us-east-2:431360052788:instance/i-09a954b05c01fed40",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09a954b05c01fed40",
            "instance_state": "running",
            "instance_type": "m5.large",
            "ipv6_address_count": 0,
            "key_name": "test-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-05b05c40e7aed2543",
            "private_dns": "ip-172-64-30-249.us-east-2.compute.internal",
            "private_ip": "172.64.30.249",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 300,
                "volume_id": "vol-0125e62d8f7e498bc",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0abf20430609dcbcc"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-090cf2ec7551a674f",
            "tags": {
              "Application": "TouchWorks",
              "Description": "FHIR and Unity",
              "Environment": "Production-1",
              "Environment-Short": "P1",
              "Name": "MEDAMPP1FHIR05",
              "Owner": "MED",
              "Purpose": "FHIR"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0abf20430609dcbcc"
            ]
          },
          "dependencies": [
            "module.modules.data.aws_availability_zones.AvailabilityZones",
            "module.modules.data.aws_security_group.MiddleTier",
            "module.modules.data.aws_subnet.SubNet-0_2"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-056f139b85f494248",
            "arn": "arn:aws:ec2:us-east-2:431360052788:instance/i-0d232b24f3b88096d",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d232b24f3b88096d",
            "instance_state": "running",
            "instance_type": "m5.large",
            "ipv6_address_count": 0,
            "key_name": "test-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f3c1b657c5a48901",
            "private_dns": "ip-172-64-30-241.us-east-2.compute.internal",
            "private_ip": "172.64.30.241",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 300,
                "volume_id": "vol-019b50af865dd633b",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0abf20430609dcbcc"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-090cf2ec7551a674f",
            "tags": {
              "Application": "TouchWorks",
              "Description": "FHIR and Unity",
              "Environment": "Production-1",
              "Environment-Short": "P1",
              "Name": "MEDAMPP1FHIR06",
              "Owner": "MED",
              "Purpose": "FHIR"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0abf20430609dcbcc"
            ]
          },
          "dependencies": [
            "module.modules.data.aws_availability_zones.AvailabilityZones",
            "module.modules.data.aws_security_group.MiddleTier",
            "module.modules.data.aws_subnet.SubNet-0_2"
          ]
        }
      ]
    },
    {
      "module": "module.modules",
      "mode": "managed",
      "type": "aws_instance",
      "name": "TouchWorks-IFC-11",
      "provider": "module.modules.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-056f139b85f494248",
            "arn": "arn:aws:ec2:us-east-2:431360052788:instance/i-081f37fd0796480b0",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2b",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "xvdb",
                "encrypted": false,
                "iops": 25000,
                "volume_id": "vol-025a19aa7b82a3e7f",
                "volume_size": 512,
                "volume_type": "io1"
              },
              {
                "delete_on_termination": true,
                "device_name": "xvdc",
                "encrypted": false,
                "iops": 1536,
                "volume_id": "vol-059ff295d4127734f",
                "volume_size": 512,
                "volume_type": "gp2"
              },
              {
                "delete_on_termination": true,
                "device_name": "xvdd",
                "encrypted": false,
                "iops": 768,
                "volume_id": "vol-0d0ee0a8406874404",
                "volume_size": 256,
                "volume_type": "gp2"
              },
              {
                "delete_on_termination": true,
                "device_name": "xvde",
                "encrypted": false,
                "iops": 0,
                "volume_id": "vol-0c0ef8064c17f22eb",
                "volume_size": 2048,
                "volume_type": "st1"
              }
            ],
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-081f37fd0796480b0",
            "instance_state": "running",
            "instance_type": "m5.xlarge",
            "ipv6_address_count": 0,
            "key_name": "test-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0efa8762a1035ff44",
            "private_dns": "ip-172-64-29-70.us-east-2.compute.internal",
            "private_ip": "172.64.29.70",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 300,
                "volume_id": "vol-0b8516e0c52ef91a5",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-097bba28405879dce"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0278ece0694acbf6e",
            "tags": {
              "Application": "TouchWorks",
              "Description": "Interface Server App Server-eLink",
              "Environment": "Production-1",
              "Environment-Short": "P1",
              "Name": "MEDAMPP1IFC04",
              "Owner": "MED",
              "Purpose": "IFC"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-097bba28405879dce"
            ]
          },
          "dependencies": [
            "module.modules.data.aws_availability_zones.AvailabilityZones",
            "module.modules.data.aws_security_group.Database",
            "module.modules.data.aws_subnet.SubNet-0_3"
          ]
        }
      ]
    },
    {
      "module": "module.modules",
      "mode": "managed",
      "type": "aws_instance",
      "name": "TouchWorks-IFC-12",
      "provider": "module.modules.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-056f139b85f494248",
            "arn": "arn:aws:ec2:us-east-2:431360052788:instance/i-061e0c19e45500cd4",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2c",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "xvdb",
                "encrypted": false,
                "iops": 25000,
                "volume_id": "vol-043cc18c3e99af339",
                "volume_size": 512,
                "volume_type": "io1"
              },
              {
                "delete_on_termination": true,
                "device_name": "xvdc",
                "encrypted": false,
                "iops": 1536,
                "volume_id": "vol-0cd4c760b902d37e2",
                "volume_size": 512,
                "volume_type": "gp2"
              },
              {
                "delete_on_termination": true,
                "device_name": "xvdd",
                "encrypted": false,
                "iops": 768,
                "volume_id": "vol-0d0940562a6aa1217",
                "volume_size": 256,
                "volume_type": "gp2"
              },
              {
                "delete_on_termination": true,
                "device_name": "xvde",
                "encrypted": false,
                "iops": 0,
                "volume_id": "vol-0b2bf20ceef38aad1",
                "volume_size": 2048,
                "volume_type": "st1"
              }
            ],
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-061e0c19e45500cd4",
            "instance_state": "running",
            "instance_type": "m5.xlarge",
            "ipv6_address_count": 0,
            "key_name": "test-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-03e5b6a489ca25d78",
            "private_dns": "ip-172-64-28-244.us-east-2.compute.internal",
            "private_ip": "172.64.28.244",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 300,
                "volume_id": "vol-0de5b8918ffa3b6d8",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-097bba28405879dce"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05900955794615063",
            "tags": {
              "Application": "TouchWorks",
              "Description": "Interface DB Server-eLink (SQL)",
              "Environment": "Production-1",
              "Environment-Short": "P1",
              "Name": "MEDAMPP1IFC04",
              "Owner": "MED",
              "Purpose": "IFC"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-097bba28405879dce"
            ]
          },
          "dependencies": [
            "module.modules.data.aws_availability_zones.AvailabilityZones",
            "module.modules.data.aws_security_group.Database",
            "module.modules.data.aws_subnet.SubNet-0_4"
          ]
        }
      ]
    },
    {
      "module": "module.modules",
      "mode": "managed",
      "type": "aws_instance",
      "name": "TouchWorks-IIS-7",
      "provider": "module.modules.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-056f139b85f494248",
            "arn": "arn:aws:ec2:us-east-2:431360052788:instance/i-057bef49193aa113f",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2b",
            "cpu_core_count": 4,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-057bef49193aa113f",
            "instance_state": "running",
            "instance_type": "m5.2xlarge",
            "ipv6_address_count": 0,
            "key_name": "test-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-053c073de64e56e71",
            "private_dns": "ip-172-64-31-86.us-east-2.compute.internal",
            "private_ip": "172.64.31.86",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 300,
                "volume_id": "vol-0ab6eb544546d0f26",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0abf20430609dcbcc"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fb71a54514b86ed4",
            "tags": {
              "Application": "TouchWorks",
              "Description": "Web Server - Tier 2 - 175 users per ",
              "Environment": "Production-1",
              "Environment-Short": "P1",
              "Name": "MEDAMPP1IIS04",
              "Owner": "MED",
              "Purpose": "IIS"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0abf20430609dcbcc"
            ]
          },
          "dependencies": [
            "module.modules.data.aws_availability_zones.AvailabilityZones",
            "module.modules.data.aws_security_group.MiddleTier",
            "module.modules.data.aws_subnet.SubNet-0_1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-056f139b85f494248",
            "arn": "arn:aws:ec2:us-east-2:431360052788:instance/i-0c09c405b1e360fa7",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2b",
            "cpu_core_count": 4,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c09c405b1e360fa7",
            "instance_state": "running",
            "instance_type": "m5.2xlarge",
            "ipv6_address_count": 0,
            "key_name": "test-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-09c038f043f8f3624",
            "private_dns": "ip-172-64-31-139.us-east-2.compute.internal",
            "private_ip": "172.64.31.139",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 300,
                "volume_id": "vol-08435249a2d99d12a",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0abf20430609dcbcc"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fb71a54514b86ed4",
            "tags": {
              "Application": "TouchWorks",
              "Description": "Web Server - Tier 2 - 175 users per ",
              "Environment": "Production-1",
              "Environment-Short": "P1",
              "Name": "MEDAMPP1IIS05",
              "Owner": "MED",
              "Purpose": "IIS"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0abf20430609dcbcc"
            ]
          },
          "dependencies": [
            "module.modules.data.aws_availability_zones.AvailabilityZones",
            "module.modules.data.aws_security_group.MiddleTier",
            "module.modules.data.aws_subnet.SubNet-0_1"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-056f139b85f494248",
            "arn": "arn:aws:ec2:us-east-2:431360052788:instance/i-0c7fe60c3ae2589f3",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2b",
            "cpu_core_count": 4,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c7fe60c3ae2589f3",
            "instance_state": "running",
            "instance_type": "m5.2xlarge",
            "ipv6_address_count": 0,
            "key_name": "test-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0aa3fb1cc3b74bb55",
            "private_dns": "ip-172-64-31-123.us-east-2.compute.internal",
            "private_ip": "172.64.31.123",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 300,
                "volume_id": "vol-0af5f3cb19ecd219e",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0abf20430609dcbcc"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fb71a54514b86ed4",
            "tags": {
              "Application": "TouchWorks",
              "Description": "Web Server - Tier 2 - 175 users per ",
              "Environment": "Production-1",
              "Environment-Short": "P1",
              "Name": "MEDAMPP1IIS06",
              "Owner": "MED",
              "Purpose": "IIS"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0abf20430609dcbcc"
            ]
          },
          "dependencies": [
            "module.modules.data.aws_availability_zones.AvailabilityZones",
            "module.modules.data.aws_security_group.MiddleTier",
            "module.modules.data.aws_subnet.SubNet-0_1"
          ]
        }
      ]
    },
    {
      "module": "module.modules",
      "mode": "managed",
      "type": "aws_instance",
      "name": "TouchWorks-IIS-8",
      "provider": "module.modules.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-056f139b85f494248",
            "arn": "arn:aws:ec2:us-east-2:431360052788:instance/i-0ce6241c4dcd1766a",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2c",
            "cpu_core_count": 4,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ce6241c4dcd1766a",
            "instance_state": "running",
            "instance_type": "m5.2xlarge",
            "ipv6_address_count": 0,
            "key_name": "test-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f36e64158c29869c",
            "private_dns": "ip-172-64-30-7.us-east-2.compute.internal",
            "private_ip": "172.64.30.7",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 300,
                "volume_id": "vol-0457e0a73a7f7be83",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0abf20430609dcbcc"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-090cf2ec7551a674f",
            "tags": {
              "Application": "TouchWorks",
              "Description": "Web Server - Tier 2 - 175 users per ",
              "Environment": "Production-1",
              "Environment-Short": "P1",
              "Name": "MEDAMPP1IIS04",
              "Owner": "MED",
              "Purpose": "IIS"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0abf20430609dcbcc"
            ]
          },
          "dependencies": [
            "module.modules.data.aws_availability_zones.AvailabilityZones",
            "module.modules.data.aws_security_group.MiddleTier",
            "module.modules.data.aws_subnet.SubNet-0_2"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-056f139b85f494248",
            "arn": "arn:aws:ec2:us-east-2:431360052788:instance/i-0d17a0a3d8d2ca820",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2c",
            "cpu_core_count": 4,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d17a0a3d8d2ca820",
            "instance_state": "running",
            "instance_type": "m5.2xlarge",
            "ipv6_address_count": 0,
            "key_name": "test-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-02d2e361bba2ef30d",
            "private_dns": "ip-172-64-30-50.us-east-2.compute.internal",
            "private_ip": "172.64.30.50",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 300,
                "volume_id": "vol-0f337c4b672b0eccb",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0abf20430609dcbcc"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-090cf2ec7551a674f",
            "tags": {
              "Application": "TouchWorks",
              "Description": "Web Server - Tier 2 - 175 users per ",
              "Environment": "Production-1",
              "Environment-Short": "P1",
              "Name": "MEDAMPP1IIS05",
              "Owner": "MED",
              "Purpose": "IIS"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0abf20430609dcbcc"
            ]
          },
          "dependencies": [
            "module.modules.data.aws_availability_zones.AvailabilityZones",
            "module.modules.data.aws_security_group.MiddleTier",
            "module.modules.data.aws_subnet.SubNet-0_2"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-056f139b85f494248",
            "arn": "arn:aws:ec2:us-east-2:431360052788:instance/i-0633cd82910e82043",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2c",
            "cpu_core_count": 4,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0633cd82910e82043",
            "instance_state": "running",
            "instance_type": "m5.2xlarge",
            "ipv6_address_count": 0,
            "key_name": "test-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0bccde907ebccfd03",
            "private_dns": "ip-172-64-30-125.us-east-2.compute.internal",
            "private_ip": "172.64.30.125",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 300,
                "volume_id": "vol-06678f87abec2351c",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0abf20430609dcbcc"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-090cf2ec7551a674f",
            "tags": {
              "Application": "TouchWorks",
              "Description": "Web Server - Tier 2 - 175 users per ",
              "Environment": "Production-1",
              "Environment-Short": "P1",
              "Name": "MEDAMPP1IIS06",
              "Owner": "MED",
              "Purpose": "IIS"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0abf20430609dcbcc"
            ]
          },
          "dependencies": [
            "module.modules.data.aws_availability_zones.AvailabilityZones",
            "module.modules.data.aws_security_group.MiddleTier",
            "module.modules.data.aws_subnet.SubNet-0_2"
          ]
        }
      ]
    },
    {
      "module": "module.modules",
      "mode": "managed",
      "type": "aws_instance",
      "name": "TouchWorks-MNGT-14",
      "provider": "module.modules.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-056f139b85f494248",
            "arn": "arn:aws:ec2:us-east-2:431360052788:instance/i-017079738e39bc766",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "xvdb",
                "encrypted": false,
                "iops": 0,
                "volume_id": "vol-0b55ffd7dea696a43",
                "volume_size": 2048,
                "volume_type": "st1"
              },
              {
                "delete_on_termination": true,
                "device_name": "xvdc",
                "encrypted": false,
                "iops": 0,
                "volume_id": "vol-06472f12d849456b4",
                "volume_size": 2048,
                "volume_type": "st1"
              }
            ],
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-017079738e39bc766",
            "instance_state": "running",
            "instance_type": "m5.large",
            "ipv6_address_count": 0,
            "key_name": "test-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f7244c3b39c995b4",
            "private_dns": "ip-172-64-27-179.us-east-2.compute.internal",
            "private_ip": "172.64.27.179",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 300,
                "volume_id": "vol-00f388b7a1ec6f516",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-023ce514deb380a6e"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d1614ebba0c8b5ac",
            "tags": {
              "Application": "TouchWorks",
              "Description": "Operations and Management",
              "Environment": "Production-1",
              "Environment-Short": "P1",
              "Name": "MEDAMPP1MNGT04",
              "Owner": "MED",
              "Purpose": "MNGT"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-023ce514deb380a6e"
            ]
          },
          "dependencies": [
            "module.modules.data.aws_availability_zones.AvailabilityZones",
            "module.modules.data.aws_security_group.Backend",
            "module.modules.data.aws_subnet.SubNet-0_5"
          ]
        }
      ]
    },
    {
      "module": "module.modules",
      "mode": "managed",
      "type": "aws_instance",
      "name": "TouchWorks-MSG-10",
      "provider": "module.modules.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-056f139b85f494248",
            "arn": "arn:aws:ec2:us-east-2:431360052788:instance/i-078d128b48ac47b5e",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-078d128b48ac47b5e",
            "instance_state": "running",
            "instance_type": "m5.large",
            "ipv6_address_count": 0,
            "key_name": "test-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a715c3019ee185d2",
            "private_dns": "ip-172-64-26-102.us-east-2.compute.internal",
            "private_ip": "172.64.26.102",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 300,
                "volume_id": "vol-02ffb43c2cfed7aa9",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-023ce514deb380a6e"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08d34a4dcb82678f8",
            "tags": {
              "Application": "TouchWorks",
              "Description": "Message Server",
              "Environment": "Production-1",
              "Environment-Short": "P1",
              "Name": "MEDAMPP1MSG04",
              "Owner": "MED",
              "Purpose": "MSG"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-023ce514deb380a6e"
            ]
          },
          "dependencies": [
            "module.modules.data.aws_availability_zones.AvailabilityZones",
            "module.modules.data.aws_security_group.Backend",
            "module.modules.data.aws_subnet.SubNet-0_6"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-056f139b85f494248",
            "arn": "arn:aws:ec2:us-east-2:431360052788:instance/i-08d7550985b712090",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08d7550985b712090",
            "instance_state": "running",
            "instance_type": "m5.large",
            "ipv6_address_count": 0,
            "key_name": "test-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-04420ae365e663d7b",
            "private_dns": "ip-172-64-26-153.us-east-2.compute.internal",
            "private_ip": "172.64.26.153",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 300,
                "volume_id": "vol-043c131dc9e8775d5",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-023ce514deb380a6e"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08d34a4dcb82678f8",
            "tags": {
              "Application": "TouchWorks",
              "Description": "Message Server",
              "Environment": "Production-1",
              "Environment-Short": "P1",
              "Name": "MEDAMPP1MSG05",
              "Owner": "MED",
              "Purpose": "MSG"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-023ce514deb380a6e"
            ]
          },
          "dependencies": [
            "module.modules.data.aws_availability_zones.AvailabilityZones",
            "module.modules.data.aws_security_group.Backend",
            "module.modules.data.aws_subnet.SubNet-0_6"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-056f139b85f494248",
            "arn": "arn:aws:ec2:us-east-2:431360052788:instance/i-0d73a1d9d1890a3ea",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d73a1d9d1890a3ea",
            "instance_state": "running",
            "instance_type": "m5.large",
            "ipv6_address_count": 0,
            "key_name": "test-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f3d5fd39720bd4ea",
            "private_dns": "ip-172-64-26-226.us-east-2.compute.internal",
            "private_ip": "172.64.26.226",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 300,
                "volume_id": "vol-0c4b183002cb37ecb",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-023ce514deb380a6e"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08d34a4dcb82678f8",
            "tags": {
              "Application": "TouchWorks",
              "Description": "Message Server",
              "Environment": "Production-1",
              "Environment-Short": "P1",
              "Name": "MEDAMPP1MSG06",
              "Owner": "MED",
              "Purpose": "MSG"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-023ce514deb380a6e"
            ]
          },
          "dependencies": [
            "module.modules.data.aws_availability_zones.AvailabilityZones",
            "module.modules.data.aws_security_group.Backend",
            "module.modules.data.aws_subnet.SubNet-0_6"
          ]
        }
      ]
    },
    {
      "module": "module.modules",
      "mode": "managed",
      "type": "aws_instance",
      "name": "TouchWorks-MSG-9",
      "provider": "module.modules.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-056f139b85f494248",
            "arn": "arn:aws:ec2:us-east-2:431360052788:instance/i-0cfbb5403ffc9e612",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cfbb5403ffc9e612",
            "instance_state": "running",
            "instance_type": "m5.large",
            "ipv6_address_count": 0,
            "key_name": "test-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0006c2323a4cde134",
            "private_dns": "ip-172-64-27-15.us-east-2.compute.internal",
            "private_ip": "172.64.27.15",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 300,
                "volume_id": "vol-0fda179e995ab2673",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-023ce514deb380a6e"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d1614ebba0c8b5ac",
            "tags": {
              "Application": "TouchWorks",
              "Description": "Message Server",
              "Environment": "Production-1",
              "Environment-Short": "P1",
              "Name": "MEDAMPP1MSG04",
              "Owner": "MED",
              "Purpose": "MSG"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-023ce514deb380a6e"
            ]
          },
          "dependencies": [
            "module.modules.data.aws_availability_zones.AvailabilityZones",
            "module.modules.data.aws_security_group.Backend",
            "module.modules.data.aws_subnet.SubNet-0_5"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-056f139b85f494248",
            "arn": "arn:aws:ec2:us-east-2:431360052788:instance/i-0676b4186c3c9f0ca",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0676b4186c3c9f0ca",
            "instance_state": "running",
            "instance_type": "m5.large",
            "ipv6_address_count": 0,
            "key_name": "test-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0fc502ff305246c61",
            "private_dns": "ip-172-64-27-145.us-east-2.compute.internal",
            "private_ip": "172.64.27.145",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 300,
                "volume_id": "vol-0b9f0dade6d929823",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-023ce514deb380a6e"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d1614ebba0c8b5ac",
            "tags": {
              "Application": "TouchWorks",
              "Description": "Message Server",
              "Environment": "Production-1",
              "Environment-Short": "P1",
              "Name": "MEDAMPP1MSG05",
              "Owner": "MED",
              "Purpose": "MSG"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-023ce514deb380a6e"
            ]
          },
          "dependencies": [
            "module.modules.data.aws_availability_zones.AvailabilityZones",
            "module.modules.data.aws_security_group.Backend",
            "module.modules.data.aws_subnet.SubNet-0_5"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-056f139b85f494248",
            "arn": "arn:aws:ec2:us-east-2:431360052788:instance/i-0a639c409f3467975",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a639c409f3467975",
            "instance_state": "running",
            "instance_type": "m5.large",
            "ipv6_address_count": 0,
            "key_name": "test-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-097190667707f0bb5",
            "private_dns": "ip-172-64-27-211.us-east-2.compute.internal",
            "private_ip": "172.64.27.211",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 300,
                "volume_id": "vol-0773c8cf808fa3295",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-023ce514deb380a6e"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d1614ebba0c8b5ac",
            "tags": {
              "Application": "TouchWorks",
              "Description": "Message Server",
              "Environment": "Production-1",
              "Environment-Short": "P1",
              "Name": "MEDAMPP1MSG06",
              "Owner": "MED",
              "Purpose": "MSG"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-023ce514deb380a6e"
            ]
          },
          "dependencies": [
            "module.modules.data.aws_availability_zones.AvailabilityZones",
            "module.modules.data.aws_security_group.Backend",
            "module.modules.data.aws_subnet.SubNet-0_5"
          ]
        }
      ]
    },
    {
      "module": "module.modules",
      "mode": "managed",
      "type": "aws_instance",
      "name": "TouchWorks-SCAN-13",
      "provider": "module.modules.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-056f139b85f494248",
            "arn": "arn:aws:ec2:us-east-2:431360052788:instance/i-074c6317ef5c67747",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "xvdb",
                "encrypted": false,
                "iops": 0,
                "volume_id": "vol-06f3f53fab52f8303",
                "volume_size": 2048,
                "volume_type": "st1"
              },
              {
                "delete_on_termination": true,
                "device_name": "xvdc",
                "encrypted": false,
                "iops": 0,
                "volume_id": "vol-06784abaef12f4401",
                "volume_size": 2048,
                "volume_type": "st1"
              }
            ],
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-074c6317ef5c67747",
            "instance_state": "running",
            "instance_type": "m5.large",
            "ipv6_address_count": 0,
            "key_name": "test-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-05f58fe8eb5fefc40",
            "private_dns": "ip-172-64-27-213.us-east-2.compute.internal",
            "private_ip": "172.64.27.213",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 300,
                "volume_id": "vol-07908d98ab5113e25",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-023ce514deb380a6e"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d1614ebba0c8b5ac",
            "tags": {
              "Application": "TouchWorks",
              "Description": "Scan Server",
              "Environment": "Production-1",
              "Environment-Short": "P1",
              "Name": "MEDAMPP1SCAN04",
              "Owner": "MED",
              "Purpose": "SCAN"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-023ce514deb380a6e"
            ]
          },
          "dependencies": [
            "module.modules.data.aws_availability_zones.AvailabilityZones",
            "module.modules.data.aws_security_group.Backend",
            "module.modules.data.aws_subnet.SubNet-0_5"
          ]
        }
      ]
    },
    {
      "module": "module.modules",
      "mode": "managed",
      "type": "aws_instance",
      "name": "TouchWorks-SQL-16",
      "provider": "module.modules.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-056f139b85f494248",
            "arn": "arn:aws:ec2:us-east-2:431360052788:instance/i-09e2c78b4157d6a0e",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2c",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "xvdb",
                "encrypted": false,
                "iops": 25000,
                "volume_id": "vol-0215720afaa0bc3bd",
                "volume_size": 1024,
                "volume_type": "io1"
              },
              {
                "delete_on_termination": true,
                "device_name": "xvdc",
                "encrypted": false,
                "iops": 25000,
                "volume_id": "vol-06c5cfcf45092d186",
                "volume_size": 1024,
                "volume_type": "io1"
              },
              {
                "delete_on_termination": true,
                "device_name": "xvdd",
                "encrypted": false,
                "iops": 25000,
                "volume_id": "vol-038a6affdc070cbd5",
                "volume_size": 1024,
                "volume_type": "io1"
              },
              {
                "delete_on_termination": true,
                "device_name": "xvde",
                "encrypted": false,
                "iops": 25000,
                "volume_id": "vol-01ce8d71ae61f8ef3",
                "volume_size": 1024,
                "volume_type": "io1"
              },
              {
                "delete_on_termination": true,
                "device_name": "xvdf",
                "encrypted": false,
                "iops": 0,
                "volume_id": "vol-0c4ce13d50cb01cd2",
                "volume_size": 1024,
                "volume_type": "st1"
              },
              {
                "delete_on_termination": true,
                "device_name": "xvdg",
                "encrypted": false,
                "iops": 0,
                "volume_id": "vol-00adbf135b4d7cedc",
                "volume_size": 1024,
                "volume_type": "st1"
              }
            ],
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09e2c78b4157d6a0e",
            "instance_state": "running",
            "instance_type": "m5.xlarge",
            "ipv6_address_count": 0,
            "key_name": "test-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-05fddec735d8de5fb",
            "private_dns": "ip-172-64-28-254.us-east-2.compute.internal",
            "private_ip": "172.64.28.254",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 300,
                "volume_id": "vol-037eafbade33bde81",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-097bba28405879dce"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05900955794615063",
            "tags": {
              "Application": "TouchWorks",
              "Description": "Database Server (SQL)",
              "Environment": "Production-1",
              "Environment-Short": "P1",
              "Name": "MEDAMPP1SQL04",
              "Owner": "MED",
              "Purpose": "SQL"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-097bba28405879dce"
            ]
          },
          "dependencies": [
            "module.modules.data.aws_availability_zones.AvailabilityZones",
            "module.modules.data.aws_security_group.Database",
            "module.modules.data.aws_subnet.SubNet-0_4"
          ]
        }
      ]
    }
  ]
}